Fixed clicks when square already uncovered

--- a/styles/game.css
+++ b/styles/game.css
@@ -52,3 +52,25 @@ table#minesweeper td {
   height: 40px;
   background-size: cover;
 }
+
+.game{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.caption{
+  position: absolute;
+  margin:2px;
+  top:3%;
+  right:3%;
+  border-radius: 10px;
+  border-color: grey;
+  border-style: solid;
+  border-width: 1px;
+  background:#e6f0ff;
+  padding:3px;
+  text-align:right;
+  margin-bottom:35px;
+  font-size:40px;
+  }
